--- a/MJJConsultRevision/src/styling/nav.scss
+++ b/MJJConsultRevision/src/styling/nav.scss
@@ -13,6 +13,19 @@ html {
     font: 0.9em/1.5 times-new-roman;
 }
 
+#header {
+  position:fixed;
+		height: 50px;
+		display:block;
+    width: 100%;
+    background: transparent;
+		z-index:9;
+		text-align:center;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
+
 .tabs {
     margin:  0;
     padding: 0;
@@ -63,6 +76,7 @@ html {
     text-align: center;
     border-radius: 0;
     overflow: hidden; /* [1] */
+    
 }
 
         .primary-nav a {
@@ -182,13 +196,3 @@ html {
   content:"x";
 }
 
-#header {
-  position:fixed;
-		height: 50px;
-		display:block;
-    width: 100%;
-    background: transparent;
-		z-index:9;
-		text-align:center;
-		color: #f2f2f2;
-}
