--- a/MJJConsultRevision/src/styling/nav.scss
+++ b/MJJConsultRevision/src/styling/nav.scss
@@ -7,6 +7,20 @@
   -o-transition: $x;
   transition: $x;
 }
+@mixin rainbow(){
+  background: repeating-linear-gradient(-45deg,red 0%, yellow 7.14%, rgb(0,255,0) 14.28%, rgb(0,255,255) 21.42%, cyan 28.56%, magenta 42.84%, red 50%);
+    background-size:600vw 600vw;
+    -webkit-animation:'slide' 6s infinite linear forwards;
+}
+
+@keyframes slide{
+  0%{
+    background-position-x: 0%;
+  }
+  100%{
+    background-position-x: 600vw;
+  }
+}
 
 
 html {
@@ -93,7 +107,7 @@ html {
           display: block;
           width: 0;
           height: 2px;
-          background: rgb(90, 250, 255);
+          @include rainbow;
           transition: width .3s;
         }
         .primary-nav a:hover::after {
