--- a/MJJConsultRevision/src/styling/tooltips.scss
+++ b/MJJConsultRevision/src/styling/tooltips.scss
@@ -1,6 +1,29 @@
+@mixin rainbow() {
+    background: repeating-linear-gradient(-45deg,red 0%, yellow 7.14%, rgb(0,255,0) 14.28%, rgb(0,255,255) 21.42%, cyan 28.56%, blue 35.7%, magenta 42.84%, red 50%);
+      background-size:600vw 600vw;
+      -webkit-animation:'slide' 10s infinite linear forwards;
+}
+
+@keyframes slide {
+    0%{
+      background-position-x: 0%;
+    }
+    100%{
+      background-position-x: 600vw;
+    }
+  }
+   .mr-1 {
+       @include rainbow;
+   }
+
+   #Tooltip-0, #Tooltip-1, #Tooltip-2 {
+       color: #fff
+   }
+
+
 #inline {
-    display: grid;
+    display: inline-block;
     > span {
-        margin-top: 5px;
+        margin-left: 5px;
     }
 }
