--- a/MJJConsultRevision/src/styling/tooltips.scss
+++ b/MJJConsultRevision/src/styling/tooltips.scss
@@ -1,10 +1,15 @@
-@mixin rainbow() {
+@mixin rainbow () {
     background: repeating-linear-gradient(-45deg,red 0%, yellow 7.14%, rgb(0,255,0) 14.28%, rgb(0,255,255) 21.42%, cyan 28.56%, blue 35.7%, magenta 42.84%, red 50%);
       background-size:600vw 600vw;
-      -webkit-animation:'slide' 10s infinite linear forwards;
+      animation:'slide' 10s infinite linear forwards;
+      -webkit-animation:'slide' 10s infinite linear forwards;   
+      -moz-animation:'slide' 10s infinite linear forwards;
+      -o-animation:'slide' 10s infinite linear forwards;
+      -ms-animation:'slide' 10s infinite linear forwards;
+
 }
 
-@keyframes slide {
+  @-webkit-keyframes slide {
     0%{
       background-position-x: 0%;
     }
@@ -12,6 +17,43 @@
       background-position-x: 600vw;
     }
   }
+  
+  @-ms-keyframes slide {
+    0%{
+      background-position-x: 0%;
+    }
+    100%{
+      background-position-x: 600vw;
+    }
+  }
+
+  @-moz-keyframes slide {
+    0%{
+      background-position-x: 0%;
+    }
+    100%{
+      background-position-x: 600vw;
+    }
+  }
+
+  @-o-keyframes slide {
+    0%{
+      background-position-x: 0%;
+    }
+    100%{
+      background-position-x: 600vw;
+    }
+  }
+
+  @keyframes slide {
+    0%{
+      background-position-x: 0%;
+    }
+    100%{
+      background-position-x: 600vw;
+    }
+  }
+
    .mr-1 {
        @include rainbow;
    }
