--- a/MJJConsultRevision/src/styling/home.scss
+++ b/MJJConsultRevision/src/styling/home.scss
@@ -1,3 +1,16 @@
+@mixin transition($x...) {
+  -webkit-transition: $x;
+  -moz-transition: $x;
+  -ms-transition: $x;
+  -o-transition: $x;
+  transition: $x;
+}
+@mixin rainbow() {
+  background: repeating-linear-gradient(-45deg,red 0%, yellow 7.14%, rgb(0,255,0) 14.28%, rgb(0,255,255) 21.42%, cyan 28.56%, magenta 42.84%, red 50%);
+    background-size:600vw 600vw;
+    -webkit-animation:'slide' 6s infinite linear forwards;
+}
+
 body {
   font-family: arial, helvetica;
 }
@@ -77,23 +90,9 @@ h4 {
   background-size: cover;
 }
 
-
-.leftSide {
+.slide {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
-  background-size: cover; 
-  float: right;
-  width: 50%;
-  height: 100%;
-  padding-top: 20vh;
-}
-
-.rightSide {
-  background-image: linear-gradient(270deg, rgba(10, 128, 118,0.5), rgba(47, 226, 211, 0.5)), url('https://i.pinimg.com/originals/a3/04/16/a304168113a5f756762b40e998e21b04.jpg');
   background-size: cover;
-  float: right;
-  width: 50%;
-  height: 100%;
-  padding-top: 20vh;
 }
 
 #title {
@@ -104,6 +103,24 @@ h4 {
   font-style: oblique;
 }
 
+#slide-header {
+  text-align: center;
+  border-bottom: 1px #fff solid;
+  width: 100%;
+}
 
+.leftSide {
+  float: left;
+  width: 70%;
+  height: 100%;
+  padding-top: 20vh;
+}
 
+.rightSide {
+float: left;
+width: 30%;
+height: 100%;
+padding-top: 25vh;
+overflow: hidden;
+}
 
