--- a/MJJConsultRevision/src/styling/tooltips.scss
+++ b/MJJConsultRevision/src/styling/tooltips.scss
@@ -1,6 +1,6 @@
 @mixin rainbow () {
-    background: repeating-linear-gradient(-45deg,red 0%, yellow 7.14%, rgb(0,255,0) 14.28%, rgb(0,255,255) 21.42%, cyan 28.56%, blue 35.7%, magenta 42.84%, red 50%);
-      background-size:600vw 600vw;
+  background: repeating-linear-gradient(-45deg,red 0%,  cyan 28.56%, magenta 42.84%, red 50%);      
+  background-size:600vw 600vw;
       animation:'slide' 10s infinite linear forwards;
       -webkit-animation:'slide' 10s infinite linear forwards;   
       -moz-animation:'slide' 10s infinite linear forwards;
