--- a/MJJConsultRevision/src/styling/home.scss
+++ b/MJJConsultRevision/src/styling/home.scss
@@ -77,6 +77,7 @@ h4 {
 }
 
 #bg1 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
   background-size: cover;
 }
 
@@ -103,24 +104,40 @@ h4 {
   font-style: oblique;
 }
 
-#slide-header {
-  text-align: center;
-  border-bottom: 1px #fff solid;
-  width: 100%;
-}
 
 .leftSide {
   float: left;
-  width: 70%;
+  width: 33%;
   height: 100%;
-  padding-top: 20vh;
+  padding-top: 40vh;
+}
+
+.middle {
+  float: left;
+  width: 33%;
+  height: 100%;
+  padding-top: 40vh;
 }
 
 .rightSide {
 float: left;
-width: 30%;
+width: 33%;
 height: 100%;
-padding-top: 25vh;
+padding-top: 40vh;
 overflow: hidden;
 }
 
+.rights {
+  float: left;
+  width: 50%;
+  height: 100%;
+  padding-top: 40vh;
+}
+
+
+.lefts {
+  float: left;
+  width: 50%;
+  height: 100%;
+  padding-top: 40vh;
+}
