--- a/MJJConsultRevision/src/styling/listdata.scss
+++ b/MJJConsultRevision/src/styling/listdata.scss
@@ -1,12 +1,16 @@
 .ulist {
-    animation: fadeIn 5s;
     list-style: none;
 }
-@keyframes fadeIn {
-    from {
-        opacity: 0.2; 
-    }
-    to {
-        opacity: 1;
-    }
+
+.ulist {
+    font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+    -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
+    -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
+    -o-transition: font-size 0.3s ease, background-color 0.3s ease;
+    -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
+    transition: font-size 0.3s ease, background-color 0.3s ease;
+}
+
+.ulist:hover {
+    font-size: 25px;
 }
